# OpenHomeAutomationBot

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
openhomeautomationbot/: database_management.py  filter.py  main.py  posting.py  scraping.py
scripts/: infinite-run.sh
tests/: test_openhomeautomationbot.py
