[tool.poetry]
name = "OpenHomeAutomationBot"
version = "0.1.0"
description = ""
authors = ["GeckoEidechse <gecko.eidechse+git@pm.me>"]
readme = "README.md"

[tool.poetry.scripts]
openhomeautomationbot = "openhomeautomationbot.main:main"

[tool.poetry.dependencies]
python = "^3.10"
praw = "^7.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
