[tool.poetry]
name = "OpenHomeAutomationBot"
version = "0.1.0"
description = ""
authors = ["GeckoEidechse <gecko.eidechse+git@pm.me>"]
readme = "README.md"

[tool.poetry.scripts]
openhomeautomationbot = "openhomeautomationbot.main:main"

[tool.poetry.dependencies]
python = "^3.10"
praw = "^7.7.0"
newspaper3k = "^0.2.8"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
black = "^23.1.0"
ipython = "^8.13.2"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
